--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,14 @@
     border-width: 0 2px 2px 0;
     transform: translate(-50%, -50%) rotate(45deg);
   }
+
+  select-style {
+    @apply block w-full px-4 py-2 pr-8 leading-tight bg-white border border-gray-300 rounded-md shadow-sm appearance-none focus:outline-none focus:ring focus:border-blue-300;
+  }
+
+  .option-style {
+    @apply bg-white text-gray-700 hover:bg-gray-100 hover:text-gray-900;
+  }
   html,
   body {
     height: 100%;
